🔧 Updated layout and styles for RTL Arabic version

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="resume-item">
               <h4>مهندس موقع</h4>
               <h5>2014 - 2019</h5>
-              <p><em>شركة XYZ للمقاولات</em></p>
+              <p><em>شركة السعدني للمقاولات</em></p>
               <ul>
                 <li>متابعة تقدم الأعمال الميدانية وتنسيق العمليات.</li>
                 <li>التواصل مع العملاء لضمان تلبية المتطلبات.</li>
